# colourcyclinginthehousetonight

./: .editorconfig  .gitignore  CMakeLists.txt  COPYING  vwbmf.xml
.github/workflows/: lbminfo.yml  lbmview.yml  pylint.yml
cmake/: FindOgg.cmake  FindVorbis.cmake  FindVorbisfile.cmake
lbminfo/: Cargo.toml
lbminfo/src/: check.rs  chunk.rs  fsext.rs  info.rs  lbm.rs  main.rs  optionset.rs  reader.rs
lbminfo/src/chunk/: amiga.rs  custom.rs  dpaint.rs  graphicraft.rs  header.rs  nonstandard.rs  private.rs  range.rs  standard.rs  strings.rs
lbminfo/src/maths/: mat3.rs  vec2.rs  vec3.rs
lbmview/: CMakeLists.txt
lbmview/cmake/: FindVorbis.cmake
lbmview/scripts/: update_libs.py  vwfnt2c.py
lbmview/src/: audio.c  display.c  display.h  font.c  font.h  lbm.c  lbm.h  lbmdef.h  lbmio.c  lbmpal.c  main.c  surface.c  text.c  text.h  util.h
lbmview/web/: Makefile  embuild.sh  formatjs.sh  index.html
src/: audio.c  audio.h  display.c  display.h  font.c  lbm.c  lbm.h  lbmdef.h  lbmio.c  lbmpal.c  main.c  surface.c  surface.h  text.c  util.h
tools/: convert.py  pal2c.py  scrape.py  update_libs.py  vwfnt2c.py
web/: embuild.sh
web/files/lbm/: DUMMY.LBM
